Added a search filtering with table-change on search

--- a/static/css/styles.less
+++ b/static/css/styles.less
@@ -8,4 +8,14 @@
 	.btn {
 		box-shadow: none;
 	}
+
+	.table {
+		table-layout: fixed;
+
+		tr {
+			th, td {
+				font-family: 'Consolas', 'Monospace';
+			}
+		}
+	}
 }
