--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@ Bootstrap DOCs: https://getbootstrap.com/docs/5.1/getting-started/
 {%- block page_body_content -%}
 	<div class="row my-3 px-3">
 		<div class="col col-12">
-			<p class="fs-5">A simple <strong>Flask</strong> website with <strong>Bootstrap</strong> for <strong>Pandas</strong> python module.</p>
+			<p class="fs-5">A simple <strong>Flask</strong> website with <strong>Bootstrap</strong> in <strong>Jinja</strong> HTML templates for <strong>Pandas</strong> python module demonstration.</p>
 		</div>
 		<div class="col col-12 col-xl-3 col-lg-4 col-md-6">
 			<div class="list-group">
@@ -17,21 +17,28 @@ Bootstrap DOCs: https://getbootstrap.com/docs/5.1/getting-started/
 					rel="noopener nofollow noindex"
 					target="_blank"
 					href="https://getbootstrap.com/docs/5.1"
-				><strong>Bootstrap</strong> Documentation</li>
+				>Documentation: <strong>Bootstrap</strong></li>
 				</a>
 				<a
 					class="list-group-item list-group-item-action list-group-item-primary"
 					rel="noopener nofollow noindex"
 					target="_blank"
 					href="https://flask.palletsprojects.com/"
-				><strong>Flask</strong> Documentation</li>
+				>Documentation: <strong>Flask</strong></li>
+				</a>
+				<a
+					class="list-group-item list-group-item-action list-group-item-primary"
+					rel="noopener nofollow noindex"
+					target="_blank"
+					href="https://jinja.palletsprojects.com/"
+				>Documentation: <strong>Jinja</strong></li>
 				</a>
 				<a
 					class="list-group-item list-group-item-action list-group-item-primary"
 					rel="noopener nofollow noindex"
 					target="_blank"
 					href="https://pandas.pydata.org/"
-				><strong>Pandas</strong> Documentation</li>
+				>Documentation: <strong>Pandas</strong></li>
 				</a>
 			</div>
 		</div>
