--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,12 @@ Bootstrap DOCs: https://getbootstrap.com/docs/5.1/getting-started/
 		<div class="col col-12 col-xl-3 col-lg-4 col-md-6">
 			<div class="list-group">
 				<a
+					class="list-group-item list-group-item-action list-group-item-info"
+					rel="noopener nofollow noindex"
+					target="_blank"
+					href="https://github.com/kenny-kvibe/flask-pandas-app"
+				>Github Repository: <strong>flask-pandas-app</strong></li>
+				</a><a
 					class="list-group-item list-group-item-action list-group-item-primary"
 					rel="noopener nofollow noindex"
 					target="_blank"
