Added `DataFrame` load from file & better HTML for search-results + included `popover` to bootstrap

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.min.css', _external=True) }}" />
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/lib/bootstrap.5.1.3.min.css', _external=True) }}" />
 	<script type="text/javascript" src="{{ url_for('static', filename='js/main-script.min.js', _external=True) }}" defer=""></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/lib/popper.2.10.2.min.js', _external=True) }}" defer=""></script>
 	<script type="text/javascript" src="{{ url_for('static', filename='js/lib/bootstrap.5.1.3.min.js', _external=True) }}" defer=""></script>
 	{%- block page_head_content -%}{%- endblock %}
 </head>
