--- a/templates/home.html
+++ b/templates/home.html
@@ -47,6 +47,19 @@ Bootstrap DOCs: https://getbootstrap.com/docs/5.1/getting-started/
 				>Documentation: <strong>Pandas</strong></li>
 				</a>
 			</div>
+			<div class="py-4">
+				<button
+					type="button"
+					class="btn btn-sm btn-outline-secondary"
+					title="Python Version"
+					data-bs-content="Running on Python {{ py_version }}"
+					data-bs-trigger="hover focus"
+					data-bs-container="body"
+					data-bs-placement="right"
+					data-bs-toggle="popover"
+					tabindex="0"
+				>Python Info</button>
+			</div>
 		</div>
 	</div>
 {%- endblock -%}
