--- a/templates/page-data.html
+++ b/templates/page-data.html
@@ -33,11 +33,26 @@
 		</div>
 		{% if number_arg != '' %}
 			<div class="col col-12 mb-1">
-				<p class="fs-6 text-success">Found results: {{ number_count }}</p>
+				<div id="search-result-alert" class="alert alert-{% if number_count > 0 %}success{% else %}danger{% endif %} alert-dismissible fade show" role="alert">
+					<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+						<symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+							<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+						</symbol>
+						<symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+							<path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+						</symbol>
+					</svg>
+					<svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Search Results Icon">
+						<use xlink:href="#{% if number_count > 0 %}check-circle{% else %}exclamation-triangle{% endif %}-fill"/>
+					</svg>
+					<button type="button" class="btn" data-bs-dismiss="alert" data-bs-target="#search-result-alert"  aria-label="Close">
+						Found results: {{ number_count }}
+					</button>
+				</div>
 			</div>
 		{% endif %}
 		<div class="col col-12 mb-1">
-			<table class="table table-bordered table table-bordered border border-dark table-hover shadow">
+			<table class="table table-bordered table table-bordered border border-dark table-hover shadow text-wrap text-break">
 				<tbody>
 					{% if table_direction == 'horizontal' %}
 						{% for key, dict in dict_table|items %}
