--- a/templates/error.html
+++ b/templates/error.html
@@ -4,7 +4,7 @@
 {% block page_body_content %}
 	<div class="row my-3 px-3">
 		<div class="col col-12">
-			<h2 class="text-danger"><strong>{{ head_title }}: {{ error_code }}</strong> - {{ error_html|safe }}</h2>
+			<h2 class="text-danger"><strong>{{ page_title }}: {{ error_code }}</strong> - {{ error_html|safe }}</h2>
 		</div>
 	</div>
 {% endblock %}
